--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
+#Source image
 image = pics\\1.png
+#Path to output images
 output = pics\\
-
+#Kernel size of the median filter
 median.size = 3
-
+#Kernel size of the Laplacian filter (now supported only 3 or 5)
 laplacian.size = 5
