--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,7 @@
                             <addClasspath>true</addClasspath>
                             <classpathPrefix>lib/</classpathPrefix>
                             <classpathLayoutType>simple</classpathLayoutType>
-                            <mainClass>ru.etu.aai.etu.image.processing.ImageProcessing</mainClass>
+                            <mainClass>ru.etu.aai.image.processing.ImageProcessing</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
