--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,7 @@ median.size = 3
 laplacian.size = 3
 #Threshold value for threshold filter
 threshold.value = 100
+#Threshold value for low pass filter
+fft.low.threshold = 30
+#Threshold value for high pass filter
+fft.high.threshold = 5
